# s3_eventbridge_sqs_lambda

./: .bandit  .commitlintrc.yaml  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .trivy.json  .trivy.yaml  .trivyignore  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
docs/: architecture.md  s3-event-processor.md
src/dynatrace/: README.md  dashboard.json
src/python/: .mypy.ini  monitor_processing.py  performance_test.py  simulate_uploads.py
src/python/functions/: __init__.py  aws_clients.py  clients.py  errors.py  process_object.py  processors.py  utils.py
src/python/tests/: conftest.py  test_process_object.py  test_simulate_uploads.py  test_utils.py
src/terraform/: autoscaling.tf  cloudwatch.tf  main.tf  outputs.tf  variables.tf
src/terraform/example/: README.md  main.tf  outputs.tf  variables.tf
src/terraform/example/files/: index.js
src/terraform/modules/eventbridge/: main.tf  outputs.tf  variables.tf
src/terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
src/terraform/modules/s3/: main.tf  variables.tf
src/terraform/modules/s3-event-processor/: README.md  dynatrace.tf  main.tf  outputs.tf  splunk.tf  variables.tf
src/terraform/modules/s3-event-processor/templates/: dynatrace_dashboard.json.tftpl  staggered_processing.json.tftpl
src/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
src/terraform/modules/step_functions/: main.tf  outputs.tf  variables.tf
